<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home"
            android:title="@string/item_home" />
        <item
            android:id="@+id/servecies"
            android:title="@string/item_servecies" />
        <item
            android:id="@+id/profile"
            android:title="@string/item_profile" />

        <item
            android:id="@+id/calculate"
            android:title="@string/item_calculate" />
        <item
            android:id="@+id/newcalculate"
            android:title="@string/item_new_calculate" />
        <item
            android:id="@+id/oldcalculate"
            android:title="@string/item_old_calculate" />
        <item
            android:id="@+id/newReservertion"
            android:title="@string/item_reservations" />
        <item
            android:id="@+id/oldReservertion"
            android:title="@string/item_reservations2" />
        <item
            android:id="@+id/coupon"
            android:title="@string/item_coupon" />
        <item
            android:id="@+id/contact"
            android:title="@string/item_contact" />
        <item
            android:id="@+id/Aboutapi"
            android:title="@string/item_about" />
        <item
            android:id="@+id/hamada"
            android:title="@string/item_developer" />
        <item
            android:id="@+id/logout"
            android:title="@string/item_LOGOUT" />
    </group>


</menu>
