<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mostafa.android.riahana.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/navi"
            android:id="@+id/navi" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home"
            android:layout_toRightOf="@id/navi"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arabic"
            android:layout_alignParentRight="true"
            />


    </RelativeLayout>


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:id="@+id/surgeries"
        android:text="@string/surgeries"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:id="@+id/Nonsurgeries"
        android:text="@string/Nonsurgeries"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"

        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:id="@+id/processes"
        android:text="@string/processes"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"

        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:id="@+id/inquiries"
        android:text="@string/inquiries"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"

        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:id="@+id/vision"
        android:text="@string/vision"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"

        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:id="@+id/callus"
        android:text="@string/callus"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"

        />
</LinearLayout>
