<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/services"
    tools:context="com.mostafa.android.riahana.Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/arrow"
                android:id="@+id/backimage"
                android:onClick="backicon"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/signup"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/paragraphSignup"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="6pt" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/Fullname"
                android:inputType="text"
                android:id="@+id/fullName"
                android:shadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/Phone"
                android:inputType="number"
                android:id="@+id/phone"
                android:shadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:inputType="text"
                android:id="@+id/Email"
                android:shadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/password"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:shadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/Repeatpassword"
                android:inputType="textPassword"
                android:id="@+id/RepeatPassword"
                android:shadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttongreen"
                    android:text="@string/signupbt"
                    android:id="@+id/signup"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Alreadyhave"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:onClick="backicon"
                    android:text="@string/login"
                    android:textColor="@color/green" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>
