<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.mostafa.android.riahana.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="70dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/hello"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="7pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/paragraph"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="6pt" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:inputType="text"
                android:shadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:shadowColor="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button2"
                    android:text="@string/login"
                    android:onClick="goon"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/forgetPassword"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StillNoAccount"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/createOne"
                    android:text="@string/CreateAccount"
                    android:textColor="@color/pinkColor" />
            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/imageAdds"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:src="@drawable/adds" />
    </LinearLayout>
</ScrollView>
