<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    android:background="@drawable/oneservices"
    tools:context="com.mostafa.android.riahana.profileActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <ImageView
            android:id="@+id/backimage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="backicon"
            android:src="@drawable/arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/item_profile"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textAppearance="?android:textAppearanceLarge" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:id="@+id/name"
            android:hint="@string/Fullname"
            android:inputType="text"
            android:shadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:hint="@string/Phone"
            android:id="@+id/phone"
            android:inputType="number"
            android:shadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:inputType="text"
            android:id="@+id/emailaddress"
            android:shadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:id="@+id/passwordpro"
            android:inputType="textPassword"
            android:shadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/btsave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/save"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />
</LinearLayout>


</ScrollView>
