<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calculatecost"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.mostafa.android.riahana.calculateActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:onClick="backIcon"
            android:src="@drawable/arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/item_calculate"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ima1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/whitecircle"
                android:src="@drawable/pic" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ima2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"

                android:layout_marginRight="50dp"
                android:background="@drawable/whitecircle"
                android:src="@drawable/pic" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ima3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/pic" />

        </FrameLayout>

        <TextView
            android:id="@+id/editPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/selectYourPic"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="20dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Description"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/DescriptionYourAge"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/white" />


        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/send"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewcalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="20dp"
        android:foregroundGravity="bottom"
        app:adSize="BANNER"
        app:adUnitId="@string/bannerCalculate" />
</LinearLayout>

</ScrollView>
